--- a/COMP2084Lab1/Views/Shared/_Layout.cshtml
+++ b/COMP2084Lab1/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - COMP2084Lab1 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2022 - COMP2084Lab1 - Tanveer Singh (200489246) <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
